# ru_tts-python

./: PORTING_PLAN.md  PORTING_STATUS.md  README.md  build_executable.py  pyinstaller_entry.py  pyproject.toml  ru-tts-python.spec
ru_tts/: __main__.py  build_backend.py  cli.py  engine.py
ru_tts_port/: __init__.py  build_compat_backend.py  build_local.py  build_nvda_backend.py  cli.py  engine.py
ru_tts_port/vendor_nvda/bridge/: ru_tts_nvda.c
ru_tts_python/: build_compat_backend.py  build_nvda_backend.py  cli.py  engine.py
ru_tts_python/native/: sink.py
ru_tts_python/vendor_nvda/bridge/: ru_tts_nvda.h
ru_tts_python/vendor_nvda/ru_tts/: config.h
