[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ru-tts-python"
version = "0.1.0"
description = "Python CLI and API integration for ru_tts using the NVDA backend"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
ru-tts-python = "ru_tts_python.cli:main"
